demo/src/main/java/com/example/demo/principle/ocp/positive/PieChart.java
package com.example.demo.principle.ocp.positive;

/**
 * @Author zhangle
 * @CreateTime 2021-12-02 10:36:15
 * @Description
 */
public class PieChart extends AbstractChart {
    public void display() {
        System.out.println("-------饼状图展示--------");
    }

    public void create() {

    }
}
