demo/src/main/java/com/example/demo/principle/ocp/negative/PieChart.java
package com.example.demo.principle.ocp.negative;

/**
 * @Author zhangle
 * @CreateTime 2021-12-02 10:22:53
 * @Description 饼状图类
 */
public class PieChart {

    public void display(){
        System.out.println("----------饼状图展示---------");
    }
}
